2002-08-30  Richard Williamson (Home)  <rjw@apple.com>

        Change link dragging behavior.  Drags URL, not URL contents.
        Still need to generate better image for dragging, will copy OmniWeb
        and drag link text.
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView mouseDragged:]):

2002-08-30  Darin Adler  <darin@apple.com>

        * WebKit.pbproj/project.pbxproj: Allowed the new Project Builder to put in
	encodings for each file.

=== Alexander-21 ===

2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 3036440 -- Crash running PLT with "Check for 'world leaks'" enabled

        * WebView.subproj/WebDataSourcePrivate.h: Add defersCallbacks boolean.
        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource _setController:]): Don't try to look at the controller before,
	it might already be deallocated.
        (-[WebDataSource _defersCallbacksChanged]): Use a boolean to record whether the
	"defers callbacks" state changed since last time and do no work if it didn't.
	This replaces the check in _setController:.

2002-08-28  Richard Williamson (Local)  <rjw@apple.com>

        Tell CG to not use time expiration of glyph cache and increase it's
        size.
        
        THIS CHANGE REQUIRES THAT YOU INSTALL THE CG ROOT.
        
        * WebCoreSupport.subproj/WebTextRendererFactory.m:

2002-08-28  Richard Williamson (Home)  <rjw@apple.com>

        Fixed selection horkage I introduced with drag
        fix yesterday.
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView mouseDragged:]):

2002-08-27  Richard Williamson (Local)  <rjw@apple.com>

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView mouseDown:]):
        (-[WebHTMLView mouseDragged:]):
        (-[WebHTMLView mouseMovedNotification:]):
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:

        Fixed active link style.  Cleaned up and fixed drag initiation